--- a/.env.docker
+++ b/.env.docker
@@ -1,9 +1,9 @@
-MODE=DEV
-LOG_LVL=INFO
+MODE=DEV  # уровень окружения
+LOG_LVL=INFO  # уровень логирования
 
-DB_NAME=db
+DB_NAME=db  # название базы данных
 
-TEST_DB_NAME=test_db
+TEST_DB_NAME=test_db  # название тестовой базы данных
 
-REDIS_HOST=redis
-REDIS_PORT=6379
+REDIS_HOST=redis   # название сервиса в docker-compose для redis
+REDIS_PORT=6379    # на каком порту находиться redis в контейнере
